--- a/web_front_end/scientfic_research_management/package.json
+++ b/web_front_end/scientfic_research_management/package.json
@@ -12,7 +12,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "element-ui": "^2.14.0",
+    "muse-ui": "^3.0.2",
+    "sass-loader": "^10.0.5",
     "vue": "^2.5.2",
+    "vue-axios": "^3.1.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -31,14 +36,12 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
-    "element-ui": "^2.14.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
-    "muse-ui": "^3.0.2",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
