补全了表格的json文件

--- a/web_front_end/scientfic_research_management/static/table/item_option/project_table/ProjectTable.json
+++ b/web_front_end/scientfic_research_management/static/table/item_option/project_table/ProjectTable.json
@@ -57,7 +57,7 @@
         "id": 10,
         "label": "到账金额",
         "type": "text",
-        "prop": "project_account"
+        "prop": "project_received_account"
     },
     {
         "id": 11,
