引入echarts，首页添加了部分内容(如未完成项目的一些信息)

--- a/web_front_end/scientfic_research_management/package.json
+++ b/web_front_end/scientfic_research_management/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "echarts": "^4.9.0",
     "element-ui": "^2.14.0",
     "muse-ui": "^3.0.2",
     "sass-loader": "^10.0.5",
