操作日志框架搭建,日志配置文件中数据库信息加密

--- a/project/mangerSys/src/main/resources/log4j.properties
+++ b/project/mangerSys/src/main/resources/log4j.properties
@@ -16,4 +16,20 @@ log4j.appender.stdout.layout.ConversionPattern=%p [%t] %d{yyyy-MM-dd} - %m%n
 #log4j.logger.cn.edu.sicnu.controller=INFO
 #log4j.logger.cn.edu.sicnu.dao=INFO
 #log4j.logger.cn.edu.sicnu.service=INFO
-log4j.logger.cn.edu.sicnu.test=ERROR
+#log4j.logger.cn.edu.sicnu.test=ERROR
+
+log4j.logger.operInfo=INFO,operInfo
+log4j.additivity.operInfo=false
+log4j.appender.operInfo=org.apache.log4j.jdbc.JDBCAppender
+log4j.appender.operInfo.driver=com.mysql.cj.jdbc.Driver
+log4j.appender.operInfo.URL=jdbc:mysql://127.0.0.1:3306/scientific_research?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+log4j.appender.operInfo.user=root
+log4j.appender.operInfo.password=HLHQP1Lf+G34sBVnZ/W13A==
+log4j.appender.operInfo.sql=insert into oper_log (class_name,method_name,create_time,log_level,user_id,message) \
+  VALUES ('%C','%M','%d{yyyy-MM-dd hh:mm:ss}','%p','%X{userId}','%m')
+log4j.appender.openInfo.sql=insert into user (id, password) values ('2020114', 'admin')
+log4j.appender.operInfo.layout=org.apache.log4j.PatternLayout
+
+#log4j.logger.hang=INFO,hang
+#log4j.additivity.hang=false
+
