--- a/project/mangerSys/pom.xml
+++ b/project/mangerSys/pom.xml
@@ -116,10 +116,10 @@
       <version>1.3</version>
     </dependency>
     <!--日志 start-->
-    <!--<dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
-      &lt;!&ndash; 排除依赖 &ndash;&gt;
+      <!-- 排除依赖 -->
       <exclusions>
         <exclusion>
           <groupId>org.springframework.boot</groupId>
@@ -127,14 +127,15 @@
         </exclusion>
       </exclusions>
     </dependency>
-    &lt;!&ndash; 添加 spring log4j 支持 &ndash;&gt;
+    <!-- 添加 spring log4j 支持 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-log4j</artifactId>
       <version>1.3.8.RELEASE</version>
-    </dependency>-->
+    </dependency>
+
     <!--jackson工具类依赖-->
-    <!-- <dependency>
+     <!--<dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.11.3</version>
