--- a/project/mangerSys/src/main/resources/log4j.properties
+++ b/project/mangerSys/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR,stdout
+log4j.rootLogger=info,stdout
 
 #子日志
 log4j.logger.cn.edu.sicnu.test=DEBUG,operInfo
@@ -43,13 +43,13 @@ log4j.appender.stdout.layout.ConversionPattern=%5p %d{yyyy MM dd HH:mm:ss,SSS} (
 
 
 #输出到数据库
-log4j.appender.operInfo=org.apache.log4j.jdbc.JDBCAppender
-log4j.appender.operInfo.driver=com.mysql.jdbc.Driver
-log4j.appender.operInfo.URL=jdbc:mysql://127.0.0.1:3306/scientific_research?useUnicode=true&characterEncoding=UTF-8
-log4j.appender.operInfo.user=root
-log4j.appender.operInfo.password=root
-
-log4j.appender.operInfo.sql=insert into oper_log (class_name,method_name,create_time,log_level,user_id,message) \
-  VALUES ('%C','%M','%d{yyyy-MM-dd hh:mm:ss}','%p','%X{userId}','%m')
-log4j.appender.openInfo.sql=insert into user (id, password) values ('2020114', 'admin')
-log4j.appender.operInfo.layout=org.apache.log4j.PatternLayout
+#log4j.appender.operInfo=org.apache.log4j.jdbc.JDBCAppender
+#log4j.appender.operInfo.driver=com.mysql.jdbc.Driver
+#log4j.appender.operInfo.URL=jdbc:mysql://127.0.0.1:3306/scientific_research?useUnicode=true&characterEncoding=UTF-8
+#log4j.appender.operInfo.user=root
+#log4j.appender.operInfo.password=root
+#
+#log4j.appender.operInfo.sql=insert into oper_log (class_name,method_name,create_time,log_level,user_id,message) \
+#  VALUES ('%C','%M','%d{yyyy-MM-dd hh:mm:ss}','%p','%X{userId}','%m')
+#log4j.appender.openInfo.sql=insert into user (id, password) values ('2020114', 'admin')
+#log4j.appender.operInfo.layout=org.apache.log4j.PatternLayout
