--- a/mangerSys/src/main/resources/application-prod.yml
+++ b/mangerSys/src/main/resources/application-prod.yml
@@ -6,4 +6,4 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/scientific_research?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
-    password: ENC(HLHQP1Lf+G34sBVnZ/W13A==)
+    password: mysql
