--- a/mangerSys/src/main/resources/application.yml
+++ b/mangerSys/src/main/resources/application.yml
@@ -26,5 +26,5 @@ spring:
 mybatis:
   mapper-locations: cn/edu/sicnu/mapper/*.xml
   type-aliases-package: cn.edu.sicnu.entity
-logging:
-  config: classpath:log4j.properties
+#logging:
+#  config: classpath:log4j.properties
