--- a/mangerSys/src/main/resources/application.yml
+++ b/mangerSys/src/main/resources/application.yml
@@ -1,12 +1,13 @@
-server:
-  context-path: /mangerSys
-  jsp-servlet:
-    init-parameters:
-      development: true
+#server:
+#  context-path: /mangerSys
+#  jsp-servlet:
+#    init-parameters:
+#      development: true
 #  address: 192.168.1.106
 jasypt:
   encryptor:
-    password: mysql
+    password: ljk
+
 spring:
   profiles:
     active: prod
@@ -14,17 +15,19 @@ spring:
     view:
       prefix: /
       suffix: .jsp
-  http:
-    multipart:
-      max-request-size: 20MB
-      max-file-size: 20MB
+  session:
+    store-type: none
+#  http:
+#    multipart:
+#      max-request-size: 20MB
+#      max-file-size: 20MB
 #logging:
 #  level:
 #    root: INFO
 #    cn.edu.sicnu.dao: debug
 #  file: F:\software-contents\intellijIDEA\log\a.log
-mybatis:
-  mapper-locations: cn/edu/sicnu/mapper/*.xml
-  type-aliases-package: cn.edu.sicnu.entity
-logging:
-  config: classpath:log4j.properties
+#mybatis:
+#  mapper-locations: cn/edu/sicnu/mapper/*.xml
+#  type-aliases-package: cn.edu.sicnu.entity
+#logging:
+#  config: classpath:log4j.properties
