修改了log4j.xml，数据库密码需重新配置，完成3个日志表(操作日志，登录日志，系统日志)的删除，成果模块(论文成果的查询和新建，著作成果，科研成果，专利产品的查询)，团队成员查看，修改登录判断逻辑

--- a/mangerSys/src/main/resources/application.yml
+++ b/mangerSys/src/main/resources/application.yml
@@ -30,4 +30,8 @@ spring:
 mybatis-plus:
   mapper-locations: cn/edu/sicnu/mapper/*.xml
   type-aliases-package: cn.edu.sicnu.entity
-#  config: classpath:log4j.properties
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+logging:
+  config: classpath:log4j.xml
