yml文件中添加log4j配置文件的位置

--- a/mangerSys/src/main/resources/application.yml
+++ b/mangerSys/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   servlet:
     context-path: /mangerSys
 #  address: 192.168.1.106
-jasypt:
-  encryptor:
-    password: ljk
+#jasypt:
+#  encryptor:
+#    password: ljk
 
 spring:
   profiles:
