--- a/web_front_end/scientfic_research_management/static/table/item_option/project_review_table/ProjectDeclarationReview.json
+++ b/web_front_end/scientfic_research_management/static/table/item_option/project_review_table/ProjectDeclarationReview.json
@@ -3,60 +3,63 @@
         "id": 1,
         "label": "项目编号",
         "type": "text",
-        "prop": "project_id"
+        "prop": "project_id",
+        "width":"90"
     },
     {
         "id": 2,
         "label": "项目名",
         "type": "text",
-        "prop": "project_name"
+        "prop": "project_name",
+        "width":"90"
     },
     {
         "id": 3,
         "label": "所属学院",
         "type": "text",
-        "prop": "project_belongs_college"
+        "prop": "project_belongs_college",
+        "width":"90"
     },
     {
         "id": 4,
         "label": "项目分类",
         "type": "text",
-        "prop": "project_classification"
+        "prop": "project_classification",
+        "width":"90"
     },
     {
         "id": 5,
         "label": "负责人",
         "type": "text",
-        "prop": "project_charger"
+        "prop": "project_charger",
+        "width":"90"
     },
     {
         "id": 6,
         "label": "立项日期",
         "type": "text",
-        "prop": "project_begin_date"
+        "prop": "project_begin_date",
+        "width":"90"
     },
     {
         "id": 7,
         "label": "审核状态",
         "type": "text",
-        "prop": "project_review_state"
+        "prop": "project_review_state",
+        "width":"90"
     },
     {
         "id": 8,
         "label": "项目经费",
         "type": "text",
-        "prop": "project_funds"
+        "prop": "project_funds",
+        "width":"90"
     },
     {
         "id": 9,
         "label": "到账金额",
         "type": "text",
-        "prop": "project_received_account"
-    },
-    {
-        "id": 10,
-        "label": "操作",
-        "type": "text",
-        "prop": "operation"
+        "prop": "project_received_account",
+        "width":"90"
     }
 ]
