--- a/Manger/pom.xml
+++ b/Manger/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cn.edu.sicnu</groupId>
@@ -48,17 +48,17 @@
           </exclusion>
       </exclusions>-->
     </dependency>
+    <!--<dependency>-->
+    <!--<groupId>org.springframework.boot</groupId>-->
+    <!--<artifactId>spring-boot-devtools</artifactId>-->
+    <!--<scope>runtime</scope>-->
+    <!--<optional>true</optional>-->
+    <!--</dependency>-->
+    <!--security-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-devtools</artifactId>
-      <scope>runtime</scope>
-      <optional>true</optional>
-    </dependency>
-    <!--security-->
-    <!--<dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>-->
+    </dependency>
     <!--引入test支持-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -72,10 +72,10 @@
       </exclusions>-->
     </dependency>
     <!--AOP-->
-    <!--<dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-aop</artifactId>
-    </dependency>-->
+    </dependency>
 
 
     <!--自定义注入时构建元数据-->
@@ -89,6 +89,7 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>-->
+
     <!--引入输入数据依赖-->
     <dependency>
       <groupId>com.alibaba</groupId>
@@ -110,11 +111,11 @@
     </dependency>
 
     <!--oracle-->
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>ojdbc6</artifactId>
-      <version>12.1.0.1-atlassian-hosted</version>
-    </dependency>
+    <!--<dependency>-->
+    <!--<groupId>com.oracle</groupId>-->
+    <!--<artifactId>ojdbc6</artifactId>-->
+    <!--<version>12.1.0.1-atlassian-hosted</version>-->
+    <!--</dependency>-->
 
     <!--lombok-->
     <dependency>
@@ -130,11 +131,11 @@
       <optional>true</optional>
     </dependency>-->
     <!--引入commons-fileUpload-->
-   <!-- <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.3</version>
-    </dependency>-->
+    <!-- <dependency>
+       <groupId>commons-fileupload</groupId>
+       <artifactId>commons-fileupload</artifactId>
+       <version>1.3</version>
+     </dependency>-->
     <!--日志 start-->
 
     <!--<dependency>
@@ -150,8 +151,11 @@
           <groupId>org.slf4j</groupId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
     </dependency>-->
-
     <!--<dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
@@ -162,13 +166,14 @@
                 <artifactId>spring-boot-starter-logging</artifactId>
             </exclusion>
         </exclusions>
-    </dependency>-->
-    <!-- 添加 spring log4j 支持 -->
-    <!--<dependency>
+    </dependency>
+    &lt;!&ndash; 添加 spring log4j 支持 &ndash;&gt;
+    <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-log4j</artifactId>
         <version>1.3.8.RELEASE</version>
     </dependency>-->
+
     <!--jackson工具类依赖-->
     <!-- <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
@@ -186,18 +191,18 @@
       <groupId>com.github.ulisesbocchio</groupId>
       <artifactId>jasypt-spring-boot-starter</artifactId>
       <version>1.8</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.9</version>
-    </dependency>-->
-      <!--lambda -->
-    <dependency>
+    </dependency>
+    <!--lambda -->
+    <!--<dependency>
       <groupId>software.amazon.awscdk</groupId>
       <artifactId>lambda</artifactId>
       <version>1.18.0</version>
-    </dependency>
+    </dependency>-->
 
   </dependencies>
 
