--- a/web_front_end/scientfic_research_management/static/table/item_option/check_result_table/ProjectCheckResultTable.json
+++ b/web_front_end/scientfic_research_management/static/table/item_option/check_result_table/ProjectCheckResultTable.json
@@ -8,51 +8,51 @@
     },
     {
         "id": 2,
-        "label": "计划(项目)编号",
+        "label": "项目编号",
         "type": "text",
-        "prop": "project_id",
+        "prop": "id",
         "width":"90"
     },
     {
         "id": 3,
         "label": "项目名称",
         "type": "text",
-        "prop": "project_name",
-        "width":"90"
+        "prop": "name",
+        "width":"170"
     },
     {
         "id": 4,
         "label": "项目来源",
         "type": "text",
-        "prop": "project_source",
+        "prop": "source",
         "width":"90"
     },
     {
         "id": 5,
         "label": "项目级别",
         "type": "text",
-        "prop": "project_level",
+        "prop": "level",
         "width":"90"
     },
     {
         "id": 6,
         "label": "项目负责人",
         "type": "text",
-        "prop": "project_charger",
-        "width":"90"
+        "prop": "charger",
+        "width":"100"
     },
     {
         "id": 7,
         "label": "起始时间",
         "type": "text",
-        "prop": "project_begin_date",
+        "prop": "begin_date",
         "width":"90"
     },
     {
         "id": 8,
         "label": "总经费",
         "type": "text",
-        "prop": "project_total_funds",
+        "prop": "total_funds",
         "width":"90"
     }
 ]
