--- a/web_front_end/scientfic_research_management/package.json
+++ b/web_front_end/scientfic_research_management/package.json
@@ -15,11 +15,14 @@
     "axios": "^0.21.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.14.0",
+    "file-saver": "^2.0.5",
     "muse-ui": "^3.0.2",
     "sass-loader": "^10.0.5",
     "vue": "^2.5.2",
     "vue-axios": "^3.1.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "xlsx": "^0.16.9",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -52,6 +55,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "script-loader": "^0.7.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
