--- a/mangerSys/pom.xml
+++ b/mangerSys/pom.xml
@@ -109,7 +109,7 @@
             <version>8.0.22</version>
             <!--<scope>runtime</scope>-->
         </dependency>
-        <!---->
+        <!--redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -192,11 +192,11 @@
           <artifactId>slf4j-log4j12</artifactId>
         </dependency>-->
         <!--用于加密-->
-        <!--<dependency>
+        <dependency>
           <groupId>com.github.ulisesbocchio</groupId>
           <artifactId>jasypt-spring-boot-starter</artifactId>
-          <version>1.8</version>
-        </dependency>-->
+          <version>2.1.2</version>
+        </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-lang3</artifactId>
@@ -226,6 +226,23 @@
           <artifactId>lambda</artifactId>
           <version>1.18.0</version>
         </dependency>
+
+        <!--jsp使用-->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <!--<dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.2</version>
+        </dependency>-->
+
 
     </dependencies>
 
