--- a/mangerSys/src/main/resources/application-prod.yml
+++ b/mangerSys/src/main/resources/application-prod.yml
@@ -6,4 +6,32 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/scientific_research?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: ENC(VueQAAtFAF87j4y01SIiTg==)
+  session:
+    store-type:
+  #redis数据库
+  redis:
+    database: 0
+    port: 6379
+    timeout: 500000ms
+    host: 127.0.0.1
+
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+#spring.redis.database=0
+# Redis服务器地址
+#spring.redis.host=localhost
+# Redis服务器连接端口
+#spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+#spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+#spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+#spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+#spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+#spring.redis.timeout=5000
